# volleyball_analytics

./: .gitignore  LICENSE  README.md  Volleyball Playtime Extractor.spec  gui.py  main.py  pyproject.toml
.agent/rules/: python-rules.md
models/rally_prediction/: config.yaml  rally_predictor_rf_netball_v1.pkl  rally_predictor_rf_v1.pkl  rally_predictor_rf_v2.pkl
output/table_data/: game1_set1_cleaned.csv  game1_set1_detections.csv  game1_set1_tracks.csv  game5_set1_cleaned.csv  game5_set1_detections.csv  game5_set1_tracks.csv  game9_c_cleaned.csv  game9_c_detections.csv  game9_c_tracks.csv
output/training_data/: game1_rally_labels_per_frame.csv  game5_rally_labels_per_frame.csv  game9_rally_labels_per_frame.csv
project_info/: TODO.MD  project_design.MD  project_design_v2.MD
publish/: build_exe.ps1
src/: __init__.py  utils.py
src/_notebooks/: ball_detector.ipynb  calibrate_test.py  calibrated  calibration_testing.ipynb  get_annot.py  homography_testing.ipynb  rally-detector-final.ipynb
src/ball_detector/: __init__.py  calibrate_detections.py  clean_tracking_data.py  get_ball_detections.py  track_ball_detections.py
src/calibration/: geometry.py
src/gui/: __init__.py  app.py  calibration_dialog.py  components.py
src/pipeline/: __init__.py  manager.py
src/rally_predictor/: __init__.py  extract_features.py  predictions_handler.py  rf_predictor.py
src/training_tools/: export_model.py  rally_annotator.py  sam3-volleyball-detector.ipynb  train-yolov8.ipynb  train_rf.py  train_rf_pipeline.py  train_rf_pipeline_netball.py  (+1 more)
tests/: test_calibration.py
(+14 files in other folders)
