[project]
name = "volleyball-cv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "lap>=0.5.12",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "openvino>=2025.4.1",
    "pandas>=2.3.3",
    "pyinstaller>=6.17.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.244",
]
